# LibreCrypt-Wallet

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build_all.ps1  setup_environment.ps1
app/: index.html  package-lock.json  package.json  vite.config.js
app/src/: main.js
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs  main_snippet.rs  protocol.rs  usb.rs  usb_snippet.rs
app/src/styles/: components.css  design-system.css  layout.css  main.css
docs/: architecture.md  crypto-design.md  threat-model.md
firmware/: BUILD.md  CMakeLists.txt
firmware/include/: aes_gcm.h  bootloader.h  ed25519.h  librecipher.h  sha256.h  usb_protocol.h  wallet.h  ws2812.h
firmware/src/: main.c
firmware/src/bootloader/: bootloader.c
firmware/src/crypto/: aes_gcm.c  ed25519.c  librecipher.c  sha256.c
firmware/src/drivers/: ws2812.c
firmware/src/protocol/: usb_protocol.c
firmware/src/wallet/: wallet.c
hardware/: README.md
tests/: e2e_test.py
