[package]
name = "librecrypt-wallet-app"
version = "0.1.0"
description = "LibreCrypt Wallet Manager"
authors = ["LibreCrypt Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
serialport = "4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
